testcases/error-cases/syntax-error-02/error.txt
error[E0014]: unexpected end of file
 --> input.canon:1:7
  |
1 | config("arg1", "arg2" {
  |       ^
2 |     name = "test"
3 | }
  |
  = note: extraneous input '(' expecting {<EOF>, '#schema', 'schema', 'struct', 'union', 'type', 'use', ANNOTATION, IDENTIFIER}
  = help: add the missing ')' before the opening brace '{'
